[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "QuantumClocktower"
version = "0.1.0"
readme = "README.md"
requires-python = ">= 3.11"
authors = [
    {name = "Zac Bott"},
    {name = "Jack Mortimer"}
]
dependencies = [
    "numpy>=2.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]